package scl_radioconfig;

enum ControlType {
  REQUEST = 1;
  REPLY = 2;
}

enum CommandId {
  GET_RADIO_CONFIG = 1;
  SET_RADIO_CONFIG = 2;
}

message ComponentParameter {
  required string param_name = 1;
  required string param_value = 2;
}

message RadioComponent {
  required int32  nr_parameters = 1;
  required int32  engine_index = 2;
  required string component_name = 3;
  repeated ComponentParameter paramters = 4;
}

message RadioEngine {
  required int32 engine_type = 1;
  required int32 engine_index = 2;
  required string engine_name = 3;
}

message RadioConfig {
  required int32 nr_engines = 1;
  required int32 nr_components = 2;
  repeated RadioEngine engines = 3;
  repeated RadioComponent components = 4;
}

message RadioConfigControl {
  required ControlType type = 1;
  required CommandId command = 2;
  optional RadioConfig radioconf = 3;
}
